// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip className api can be overridden 1`] = `
<body>
  <div>
    <div
      class="my-dope-class top"
      data-tooltip="Help Text"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip direction api allows bottom 1`] = `
<body>
  <div>
    <div
      class="tooltip bottom"
      data-tooltip="Help Text"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip direction api allows left 1`] = `
<body>
  <div>
    <div
      class="tooltip left"
      data-tooltip="Help Text"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip direction api allows right 1`] = `
<body>
  <div>
    <div
      class="tooltip right"
      data-tooltip="Help Text"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip direction api allows top 1`] = `
<body>
  <div>
    <div
      class="tooltip top"
      data-tooltip="Help Text"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip has defaults 1`] = `
<body>
  <div>
    <div
      class="tooltip top"
      data-tooltip="Help Text"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip has defaults 2`] = `
<body>
  <div>
    <div
      class="tooltip top"
      data-tooltip="Help Text"
    >
      <span
        class="sr-only"
        id="my-component-tooltip"
      >
        Help Text
      </span>
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip truncate api adds the class if true 1`] = `
<body>
  <div>
    <div
      class="tooltip top truncate"
      data-tooltip="Help Text"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip truncate api does not add the class if false 1`] = `
<body>
  <div>
    <div
      class="tooltip top"
      data-tooltip="Help Text"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;
